--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "build": "tsc"
   },
   "dependencies": {
-    "hono": "^4.8.4"
+    "hono": "^4.8.9"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@vercel/node": "^5.3.7",
+    "typescript": "^5.8.3"
   }
 }
