--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
     }
   },
   "routes": [
-    { "src": "/(.*)", "dest": "/api/index.ts" }
+    { "src": "/(.*)", "dest": "/src/index.ts" }
   ]
 }
