--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Server",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
+    "start" : "bun src/index.ts",
     "build": "tsc"
   },
   "dependencies": {
